# neojoplin

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  justfile  prompt.md  setup_local_e2ee.sh
.vibe/: instructions.md
cli/src/core/: database.rs  mod.rs  models.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: ai.rs  autosync.rs  config.rs  domain.rs  editor.rs  error.rs  jex.rs  lib.rs  sync.rs  traits.rs
crates/e2ee/: Cargo.toml
crates/e2ee/src/: crypto.rs  encryption.rs  jed_format.rs  lib.rs  master_key.rs
crates/e2ee/tests/: e2ee_compatibility_test.rs
crates/joplin/: Cargo.toml
crates/joplin-domain/: Cargo.toml
crates/joplin-domain/src/: domain.rs  error.rs  lib.rs  sync.rs  traits.rs
crates/joplin-sync/: Cargo.toml
crates/joplin-sync/src/: crypto.rs  e2ee.rs  lib.rs  sync_engine.rs  sync_info.rs  webdav.rs  webdav_trait.rs  webdav_xml.rs
crates/joplin-sync/tests/: integration_tests.rs
crates/joplin/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs  loader.rs  manager.rs  traits.rs
crates/plugins/: Cargo.toml
crates/plugins/ai-ollama/: Cargo.toml  plugin.toml
crates/plugins/ai-ollama/src/: lib.rs
crates/plugins/jarvis/: Cargo.toml  plugin.toml
crates/plugins/jarvis/src/: lib.rs
crates/plugins/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: impls.rs  lib.rs
crates/storage/tests/: note_roundtrip.rs
crates/sync/: Cargo.toml
crates/sync/examples/: fake_sync_test.rs
crates/sync/src/: fake_webdav.rs  lib.rs  sync_engine.rs  sync_info.rs  webdav.rs  webdav_trait.rs
crates/sync/tests/: sync_integration_test.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: webdav_test.rs
crates/tui/: Cargo.toml
crates/tui-bin/: Cargo.toml
crates/tui-bin/src/: main.rs
crates/tui/src/: app.rs  command_line.rs  config.rs  importer.rs  lib.rs  settings.rs  state.rs  theme.rs  ui.rs
docker/: Dockerfile.webdav  README.md  docker-compose.ollama.yml  docker-compose.yml  webdav.Caddyfile
docs/: ARCHITECTURE.md  E2EE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  TUI_E2EE_IMPLEMENTATION.md  TUI_IMPROVEMENTS.md  TUI_THEME_AWARE_COLORS.md  ai-integration-guide.md  ai-setup-quickstart.md  e2ee_status.md  gmx-cross-client-sync-verification.md  gmx-webdav-readiness-assessment.md  joplin-cli-compatibility-issue.md  kjoplin-comparison-notes.md  plugin-system-design.md  resources.md  settings-dialog-implementation-plan.md  sync-compatibility-status.md  sync-guide.md
docs/reference/: E2EE_REFERENCE.md
docs/use-cases/: 01-neojoplin-to-joplin.md  02-joplin-to-neojoplin.md  03-bidirectional-sync.md  04-edit-and-sync.md  README.md
scripts/: start_ollama.sh  stop_ollama.sh  test_ai_plugin.sh
scripts/just/: test.just
src/: lib.rs  main.rs
tests/: ai_ollama_test.sh  integration_sync_test.sh  real_webdav_test.sh  run_integration_tests.sh  sync_test.sh  sync_test_simple.sh  test_advanced_compatibility.sh  test_comprehensive_e2ee.sh  test_cross_sync.sh  test_cross_sync_comprehensive.sh  test_e2ee_functionality.sh  test_e2ee_joplin_compatibility.sh
tests/integration/: bidi_sync_test.sh  download_test.sh  quick_sync_test.sh  simple_sync_test.sh  sync_test.sh
