[workspace]
members = [
    "crates/core",
    "crates/storage",
    "crates/sync",
    "crates/e2ee",
    "crates/tui",
    "crates/cli",
    "crates/test-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Konrad Urlichs <konrad.urlichs@gmx.de>"]
license = "MIT"
repository = "https://github.com/Dronakurl/neojoplin"

[workspace.dependencies]
# Shared dependencies across all crates
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

[workspace.dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite"]

[workspace.dependencies.reqwest]
version = "0.12"
features = ["json", "stream"]

[workspace.dependencies.async-trait]
version = "0.1"

