[package]
name = "neojoplin-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI application for NeoJoplin"

[[bin]]
name = "neojoplin"
path = "src/main.rs"

[dependencies]
joplin-domain = { path = "../joplin-domain" }
joplin-sync = { path = "../joplin-sync" }
neojoplin-core = { path = "../core" }
neojoplin-storage = { path = "../storage" }
neojoplin-sync = { path = "../sync" }
neojoplin-tui = { path = "../tui" }
neojoplin-e2ee = { path = "../e2ee" }
tokio = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
uuid = { workspace = true }
chrono = "0.4"
dialoguer = "0.11"
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
