[package]
name = "neojoplin-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI application for NeoJoplin"

[[bin]]
name = "neojoplin"
path = "src/main.rs"

[dependencies]
joplin-domain = { path = "../joplin-domain" }
joplin-sync = { path = "../joplin-sync" }
neojoplin-core = { path = "../core" }
neojoplin-storage = { path = "../storage" }
neojoplin-sync = { path = "../sync" }
neojoplin-tui = { path = "../tui" }
neojoplin-e2ee = { path = "../e2ee" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
