[package]
name = "neojoplin-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain types and traits for NeoJoplin"

[dependencies]
joplin-domain = { path = "../joplin-domain" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
dirs = "5.0"
tar = "0.4"

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite"]
optional = true

[dev-dependencies]
tokio-test = "0.4"
