[package]
name = "neojoplin-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain types and traits for NeoJoplin"

[dependencies]
joplin-domain = { path = "../joplin-domain" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
tar = { workspace = true }

[dependencies.sqlx]
workspace = true
optional = true

[dev-dependencies]
tokio-test = { workspace = true }
