[package]
name = "joplin-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain types and traits for Joplin-compatible applications"
keywords = ["joplin", "note-taking", "sync"]
categories = ["data-structures", "database"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite"]
optional = true

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
sqlx = ["dep:sqlx"]
