[package]
name = "joplin-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain types and traits for Joplin-compatible applications"
keywords = ["joplin", "note-taking", "sync"]
categories = ["data-structures", "database"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

[dependencies.sqlx]
workspace = true
optional = true

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = []
sqlx = ["dep:sqlx"]
