[package]
name = "joplin-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Joplin-compatible WebDAV sync engine"
keywords = ["joplin", "sync", "webdav"]
categories = ["database", "network-programming"]

[dependencies]
joplin-domain = { path = "../joplin-domain" }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
base64 = "0.22"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
