[package]
name = "joplin-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Joplin-compatible WebDAV sync engine"
keywords = ["joplin", "sync", "webdav"]
categories = ["database", "network-programming"]

[dependencies]
joplin-domain = { path = "../joplin-domain" }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
aes = { workspace = true }
aes-gcm = { workspace = true }
ccm = { workspace = true }
sha2 = { workspace = true }
sha-1 = { workspace = true }
hex = { workspace = true }
pbkdf2 = { workspace = true }
hmac = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
