[package]
name = "neojoplin-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
joplin-domain = { path = "../joplin-domain" }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libloading = "0.8"
async-trait = "0.1"
dirs = "5.0"
downcast-rs = "1.2"
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive"] }
