[package]
name = "neojoplin-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage layer for NeoJoplin (SQLite)"

[dependencies]
joplin-domain = { path = "../joplin-domain", features = ["sqlx"] }
neojoplin-core = { path = "../core" }
tokio = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = "3.14"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
