[package]
name = "neojoplin-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sync engine for NeoJoplin (WebDAV)"

[dependencies]
neojoplin-core = { path = "../core" }
neojoplin-storage = { path = "../storage" }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
base64 = "0.22"
chrono = { workspace = true }

[[bin]]
name = "test_webdav"
path = "src/bin/test_webdav.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
