[package]
name = "neojoplin-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sync engine for NeoJoplin (WebDAV)"

[dependencies]
joplin-domain = { path = "../joplin-domain" }
joplin-sync = { path = "../joplin-sync" }
neojoplin-core = { path = "../core" }
neojoplin-storage = { path = "../storage" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
