[package]
name = "neojoplin-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI application for NeoJoplin (ratatui)"

[dependencies]
joplin-domain = { path = "../joplin-domain" }
joplin-sync = { path = "../joplin-sync" }
neojoplin-core = { path = "../core" }
neojoplin-storage = { path = "../storage" }
tokio = { workspace = true }
ratatui = "0.28"
crossterm = "0.28"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
termimad = "0.22"
minimad = "=0.11.0"
fuzzy-matcher = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
