[package]
name = "neojoplin-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI application for NeoJoplin (ratatui)"

[dependencies]
joplin-domain = { path = "../joplin-domain", features = ["sqlx"] }
joplin-sync = { path = "../joplin-sync" }
neojoplin-core = { path = "../core" }
neojoplin-storage = { path = "../storage" }
tokio = { workspace = true }
sqlx = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
ureq = { version = "2", features = ["json"] }
toml = { workspace = true }
dirs = "6.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
termimad = "0.34"
minimad = "0.14"
fuzzy-matcher = "0.3"
ratatui-interact = "0.5.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
