[package]
name = "neojoplin-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI application for NeoJoplin (ratatui)"

[dependencies]
joplin-domain = { path = "../joplin-domain", features = ["sqlx"] }
joplin-sync = { path = "../joplin-sync" }
neojoplin-core = { path = "../core" }
neojoplin-storage = { path = "../storage" }
tokio = { workspace = true }
sqlx = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
termimad = { workspace = true }
fuzzy-matcher = { workspace = true }
ratatui-interact = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
