[package]
name = "ai-ollama"
version = "0.1.0"
edition = "2021"
authors = ["NeoJoplin Team"]
license = "MIT"
repository = "https://github.com/Dronakurl/neojoplin"

[lib]
# Must be a dynamic library for plugin loading
crate-type = ["cdylib"]

[dependencies]
# NeoJoplin dependencies
neojoplin-plugin = { path = "../../plugin" }
joplin-domain = { path = "../../joplin-domain" }

# HTTP client for Ollama API (synchronous to avoid tokio conflicts)
# Using ureq instead of reqwest to avoid pulling in tokio
ureq = { version = "2.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
downcast-rs = "1.2"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
