[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"
authors = ["NeoJoplin Team"]
license = "MIT"
repository = "https://github.com/Dronakurl/neojoplin"

[lib]
# Must be a dynamic library for plugin loading
crate-type = ["cdylib"]

[dependencies]
# NeoJoplin dependencies
neojoplin-plugin = { path = "../../plugin" }
joplin-domain = { path = "../../joplin-domain" }

# For TUI rendering
ratatui = "0.30"
crossterm = "0.29"

# Async support
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
downcast-rs = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
