[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"
description = "Jarvis AI Chat Plugin for NeoJoplin - provides AI chat overlay and Ollama integration"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NeoJoplin plugin framework
neojoplin-plugin = { path = "../../plugin" }

# Async support
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# HTTP client (synchronous to avoid tokio conflicts)
ureq = { version = "2", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Utilities
anyhow = "1"
once_cell = "1.18"
tracing = "0.1"

# Domain types
joplin-domain = { path = "../../joplin-domain" }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

[features]
default = []
